--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<h1>header</h1>
-<p>paragraph1</p>
-<p>paragraph2</p>
-<a href="https://unsplash.com/images/animals/puppies">puppy photos</a>
+<h1>Current Affairs</h1>
+<p>Now with fake news spreading around the web, it is hard to tell which is fake or real news anymore. However, there is still ways to check an tell what is fake news</p>
+<p>It is essential to spot and report fake news. As you might be able to spot it but others around you might not and might fall into others traps, and might potentially affect the relationship that you have with others.</p>
+<a href="https://www.straitstimes.com/singapore/the-st-guide-to-spotting-fake-news">Efficient ways to spot fake news</a>
 </html>
