--- a/index.html
+++ b/index.html
@@ -4,3 +4,12 @@
 <p>It is essential to spot and report fake news. As you might be able to spot it but others around you might not and might fall into others traps, and might potentially affect the relationship that you have with others.</p>
 <a href="https://www.straitstimes.com/singapore/the-st-guide-to-spotting-fake-news">Efficient ways to spot fake news</a>
 </html>
+<p>Things you have to take note of when spotting fake news</p>
+<ol>
+  <li>Consider the source</li>
+  <li>Read beyond</li>
+  <li>Check the author</li>
+  <li>Check the date</li>
+  <li>Ask the experts</li>
+</ol>
+<p>The reasons why you would not be able to spot fake news</p>
