--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <h1>Current Affairs</h1>
-<p>Now with fake news spreading around the web, it is hard to tell which is fake or real news anymore. However, there is still ways to check an tell what is fake news</p>
+<main>
+  <p>Now with fake news spreading around the web, it is hard to tell which is fake or real news anymore. However, there is still ways to check an tell what is fake news</p>
 <p>It is essential to spot and report fake news. As you might be able to spot it but others around you might not and might fall into others traps, and might potentially affect the relationship that you have with others.</p>
 <a href="https://www.straitstimes.com/singapore/the-st-guide-to-spotting-fake-news">Efficient ways to spot fake news</a>
-</html>
 <p>Things you have to take note of when spotting fake news</p>
 <ol>
   <li>Consider the source</li>
@@ -13,3 +13,10 @@
   <li>Ask the experts</li>
 </ol>
 <p>The reasons why you would not be able to spot fake news</p>
+<ul>
+  <li>With technology advancing, it is harder to tell apart real from fake news.</li>
+  <li>The person might use some tools to make the website or news similar to others, making it less suspicious.</li>
+</ul>
+  <p>What about you? Have you had any experiences or know anyone that has fallen into the trap of fake news before? If so please share it with us at www.reportfakenews.com.</p>
+  </main>
+</html>
